# mafia-engine-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  \  docker-compose.yaml  docker-compose.yml
.sqlx/: query-1c28197d22b13ac6ba19f5542bc424b5da6f52abf73595114d780c5ab1a941a7.json  query-209823865e1a84098aef47a779be7838f442a810b14c35b442a6c22c5a1b4efc.json  query-2bd7c8339220acd2935bb9dda1f0617aaaf5a6095355371618cf85a5aecf72b8.json  query-3f18b81533a43a648696be3cffef3c6c01bcac53c81bd93008ceff8678b1a0b2.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-92e304606c85df5f9793d842be09d9fe9b2c9e9d74d504db4c798325fdca7c06.json  query-98ec7e6b23fa2030535684bbeddd881d3c316309d244cd3e70fab24deb36489b.json  query-9a8b31c47df54448eb1c4e38aa33465c50e7cc09c27d142f2499fefc7ece0334.json  query-ab8cc0e73fd04f2e340c5c4ef5f6407fb2bcd56a8055c0d62f60936b2f0edf73.json  query-ad3d1fc9592ce461a29b7e3afc23558e430b98cbd628ad75ac09b44773406914.json  query-bc1fcdcdcc4df74c348b7edc452b22be6d3a11c0aa4732da8c3a3650c0414023.json  query-c810e347cd7c868b2580c114efe7b4ef9805ba2edca1b0061c7ec641287bc9af.json  query-d8b2eff5f8568a0e8b71eade32463dae53d2de703b34fb57c4a9ef23347f5e76.json  query-dbdbfad181e26b2e315366e1c6e70ed3f6b954821734a257d8927ce7ae55c9fc.json  query-e4d9f766644e1f3488ee0dd40f269c94159c5c548169487f2840f602383c30f1.json  query-fb2909d8dc8bcf147950870794f2c11de15954d45d40515e86a04ecbc13af8ed.json  query-fb7d6be88a918e6c78988d53cb5e2997e8a1075fc095b6d883bcb7aa11bdaa9b.json
crates/archiving/: Cargo.toml  Dockerfile
crates/bot_framework/: Cargo.toml
crates/bot_framework/src/: app.rs  commands.rs  error.rs  lib.rs  plugin.rs
crates/bot_framework_macros/: Cargo.toml
crates/bot_framework_macros/src/: lib.rs
crates/discord/: Cargo.toml  Dockerfile
crates/discord/src/: lib.rs  main.rs
crates/discord/src/app/: discord.rs  event_handler.rs  mod.rs
crates/discord/src/app/system/: app_builder.rs  middleware.rs  mod.rs  plugin.rs  registry.rs
crates/discord/src/app/system/components/: button.rs  mod.rs  modal.rs  select.rs
crates/discord/src/features/: heartbeat.rs  mod.rs  rename.rs  test_admin.rs
crates/discord/src/features/archiving/: mod.rs
crates/discord/src/features/middleware/: mod.rs  require_manage_channels.rs  require_member.rs  require_server.rs
crates/discord/src/features/playerchats/: mod.rs
crates/discord/src/features/signups/: create.rs  embed.rs  mod.rs
crates/discord/src/features/signups/buttons/: join.rs  leave.rs  mod.rs  refresh.rs  settings.rs
crates/discord/src/features/signups/manage/: add_user.rs  category_select.rs  cull.rs  edit_category.rs  home.rs  mod.rs  playerchats.rs  remove_user.rs
crates/discord/src/features/votecounter/: manage.rs  mod.rs
crates/discord/src/features/votecounter/manage/: mod.rs
crates/discord/src/features/votecounter/manage/form/: mod.rs  players.rs  state.rs  toggles.rs
crates/discord/src/features/votecounter/players/: mod.rs  skip.rs  unvote.rs  vote.rs  votecount.rs
crates/mafia_bot/: Cargo.toml
crates/mafia_bot/src/: main.rs
crates/mafia_bot/src/features/: logger.rs  mod.rs  ping.rs
crates/mafia_bot/src/features/citizenship/: mod.rs  rename.rs
crates/mafia_bot/src/features/config/: get_prefix.rs  mod.rs  set_prefix.rs
crates/mafia_discord_framework/: Cargo.toml
crates/mafia_discord_framework/src/: app.rs  component.rs  context.rs  lib.rs  plugin.rs  slash_command.rs
crates/mafia_discord_framework_macros/: Cargo.toml
crates/mafia_discord_framework_macros/src/: lib.rs
crates/migrations/: Cargo.toml  Dockerfile
crates/migrations/migrations/: 0001_servers.sql  0002_users.sql  0003_signups.sql  0004_votecounter.sql
crates/migrations/src/: flags.rs  lib.rs  main.rs
crates/migrations/src/tables/: members.rs  mod.rs  server_flags.rs  servers.rs  signup_category.rs  signup_member.rs  signup_slot.rs  signups.rs  user_flags.rs  users.rs  votecounter.rs  votecounter_event.rs  votecounter_slot.rs  votecounter_slot_member.rs
docs/plans/: archiving.md
migrations/: 0001_initial.sql  0002_signups.sql  0003_feature_flags.sql
services/discord_rich_presence/: Cargo.toml  README.md  build.rs
services/discord_rich_presence/scripts/: compile_windows_on_mac.sh
services/discord_rich_presence/src/: main.rs
services/mafia_engine_bot/: Cargo.toml  README.md
services/mafia_engine_bot/migrations/: 0001_members.sql  0002_usergroups.sql  0003_signups.sql
services/mafia_engine_bot/src/: lib.rs  main.rs
services/mafia_engine_bot/src/app/: database.rs  mod.rs
services/mafia_engine_bot/src/features/: mod.rs  test.rs
services/mafia_engine_bot/src/features/citizenship/: citizen.rs  mod.rs  rename.rs
src/: lib.rs  main.rs
src/app/: component.rs  database.rs  discord.rs  event_handler.rs  logging.rs  mod.rs
src/app/discord/: event_handler.rs  mod.rs
src/app/logging/: features.rs  mod.rs
src/data/: mod.rs  users.rs
src/features/: mod.rs
(+26 files in other folders)
