[package]
name = "mafia-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bigdecimal = "0.4.9"
dashmap = "6.1.0"
dotenv = "0.15.0"
once_cell = "1.21.3"
poise = "0.6.1"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "migrate",
    "macros",
    "bigdecimal"
] }
sqlx-pg-uint = "0.10.1"
tokio = { version = "1.48.0", features=["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
