[package]
name = "bot_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bot_framework_macros = { path = "../bot_framework_macros" }
dashmap = "6.2.1"
futures = "0.3.32"
serde_json = "1.0.150"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }

