[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
migrations = { path = "../migrations" }
anyhow = "1.0.102"
async-trait = "0.1.89"
dashmap = "6.2.1"
dotenv = "0.15.0"
once_cell = "1.21.4"
poise = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["mysql", "runtime-tokio", "tls-rustls", "chrono", "migrate", "macros", "bigdecimal"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
