[package]
name = "mafia_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
bot_framework = { path = "../bot_framework" }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenv = "0.15.0"
