[package]
name = "mafia-discord-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
tokio = { version = "1.46", features = ["rt"] }
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
