[package]
name = "migrations"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
once_cell = "1.21.4"
sqlx = { version = "0.9.0", default-features = false, features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "macros",
    "chrono",
] }
tokio = { version = "1.52.3", features=["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
