[package]
name = "mafia-discord-rich-presence"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
auto-launch = "0.6"
directories = "6"
discord-rich-presence = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.24"
winit = "0.30"
png = "0.18"

[build-dependencies]
png = "0.18"
embed-resource = "3"
