[package]
name = "mafia-engine-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
mafia-discord-framework = { path = "../../crates/mafia_discord_framework" }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
