[package]
name = "mafia-engine-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
dotenv = "0.15.0"
mafia-discord-framework = { path = "../../crates/mafia_discord_framework" }
sqlx = { version = "0.9.0", default-features = false, features = [
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "migrate",
  "macros"
]}
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
twilight-model = "0.17.1"
url = "2.5.8"
